# sip-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cicd.yaml
agents/: base.py
agents/tools/onchain/: functions.py  story_protocol.py
settings/: config.py
src/: cli.py
src/agents/: base.py  x.py
src/agents/chat/: storage.py
src/agents/prompts/: base.py
src/agents/tools/: __init__.py  search_knowledge_base.py  web_crawler.py  web_search.py
src/agents/tools/onchain/: functions.py  story_protocol.py
src/agents/tools/x/: actions.py  functions.py
src/app/: main.py
src/app/core/: errors.py
src/app/core/middlewares/: auth.py
src/app/database/: mongo.py  redis.py
src/app/dtos/: agent.py  auth.py  chat_history.py  user.py
src/app/handlers/: agent.py  auth.py  chat_history.py  user.py
src/app/models/: user.py
src/app/routes/: agent.py  auth.py  user.py
src/app/services/: agent.py  auth.py  chat_history.py  user.py
src/settings/: config.py  log.py
src/task_queue/: celery_app.py
src/task_queue/tasks/: __init__.py  agent.py  x.py
src/utils/: functions.py  id.py  jwt.py
