[project]
name = "story-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.2.3",
    "aiohttp>=3.11.14",
    "celery>=5.4.0",
    "fastapi>=0.115.12",
    "google-auth>=2.38.0",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "pymongo>=4.11.3",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app", "agents", "task_queue"]

[project.scripts]
api = "cli:run_dev_server"
celery = "cli:run_celery"
api-prod = "cli:run_prod_server"
